test adding favicon

--- a/death-star.html
+++ b/death-star.html
@@ -3,6 +3,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>Death star information</title>
       <link rel="stylesheet" href="death-star.css">
+      <link rel="shortcut icon" href="readme-source/ani.ico" type="image/x-icon">
    </head>
    <body>
       <h1>The Death Star</h1>
